--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/router": "^15.0.0",
     "@capacitor/android": "4.7.0",
     "@capacitor/app": "4.1.1",
+    "@capacitor/camera": "^4.1.4",
     "@capacitor/core": "4.7.0",
+    "@capacitor/filesystem": "^4.1.4",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
+    "@capacitor/preferences": "^4.0.2",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
     "ionicons": "^6.0.3",
